--- a/app/src/main/res/layout/edit_habit.xml
+++ b/app/src/main/res/layout/edit_habit.xml
@@ -117,16 +117,24 @@
         <Button
             android:text="@string/history"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/button" />
+            android:id="@+id/viewHistory" />
 
         <Button
             android:id="@+id/done"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/save"
+            style="@style/Widget.AppCompat.Button" />
+
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/delete"
             style="@style/Widget.AppCompat.Button" />
     </LinearLayout>
 </ScrollView>
