--- a/app/src/main/res/layout/single_habit.xml
+++ b/app/src/main/res/layout/single_habit.xml
@@ -2,7 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="20dp"
-    android:textSize="16sp" >
+    android:paddingLeft="10dp"
+    android:textColor="#313031"
+    android:textSize="20sp" >
 </TextView>
 
