Finish touch ups for the assignment

--- a/app/src/main/res/layout/make_habit.xml
+++ b/app/src/main/res/layout/make_habit.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:id="@+id/make_habit"
     android:layout_height="match_parent">
 
     <TextView
@@ -20,44 +22,71 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:hint="What do you want to make a habit?" />
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/sunday"
+        android:checked="false"
+        android:id="@+id/Sunday" />
 
-    <ToggleButton
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:textOn="Monday"
-        android:textOff="Monday"
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/monday"
         android:checked="false"
         android:id="@+id/Monday" />
 
-    <ToggleButton
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:textOff="Tuesday"
-        android:textOn="Tuesday"
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/tuesday"
         android:checked="false"
         android:id="@+id/Tuesday" />
 
-    <ToggleButton
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:textOff="Wednesday"
-        android:textOn="Wednesday"
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="Wednesday"
         android:checked="false"
         android:id="@+id/Wednesday" />
-    <ToggleButton
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:textOff="Thursday"
-        android:textOn="Thursday"
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/thursday"
         android:checked="false"
         android:id="@+id/Thursday" />
-    <ToggleButton
-        android:layout_width="100dp"
-        android:layout_height="60dp"
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/friday"
+        android:id="@+id/Friday" />
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="18sp"
+        android:paddingStart="5dp"
+        android:paddingEnd="0dp"
+        android:text="@string/saturday"
         android:checked="false"
-        android:id="@+id/Friday"
-        android:textOff="Friday"
-        android:textOn="Friday" />
+        android:id="@+id/Saturday" />
     <Button
         android:id="@+id/done"
         android:layout_width="80dp"
