--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -3,11 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:text="@string/history"
-        android:paddingBottom="10dp"
-        android:textSize="20sp"/>
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="5dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textAlignment="center"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="450dp"
